# Travelling-Salesman-Problem

./: README.md  benchmark.ipynb  benchmark.py  benchmark_bb.ipynb  benchmark_sls.ipynb  bnb_competition.txt  branch_and_bound_results.csv  main.ipynb  main.py  optimal.py  optimal_results.csv  pyproject.toml  sls_competition.txt
sls/: stochastic_local_search_results_0.csv  stochastic_local_search_results_1.csv  stochastic_local_search_results_10.csv  stochastic_local_search_results_100.csv  stochastic_local_search_results_101.csv  stochastic_local_search_results_102.csv  stochastic_local_search_results_103.csv  stochastic_local_search_results_11.csv  stochastic_local_search_results_12.csv  stochastic_local_search_results_13.csv  stochastic_local_search_results_14.csv  stochastic_local_search_results_15.csv  stochastic_local_search_results_16.csv  stochastic_local_search_results_17.csv  stochastic_local_search_results_18.csv  stochastic_local_search_results_19.csv  stochastic_local_search_results_2.csv  stochastic_local_search_results_20.csv  stochastic_local_search_results_21.csv  stochastic_local_search_results_22.csv  stochastic_local_search_results_23.csv  stochastic_local_search_results_24.csv  stochastic_local_search_results_25.csv  stochastic_local_search_results_26.csv  stochastic_local_search_results_27.csv  stochastic_local_search_results_28.csv  stochastic_local_search_results_29.csv  stochastic_local_search_results_3.csv  stochastic_local_search_results_30.csv  stochastic_local_search_results_31.csv  stochastic_local_search_results_32.csv  (+73 more)
tsp/: base.py  (+4 more)
(+6 files in other folders)
