[tool.poetry]
name = "tsp"
version = "0.1.0"
description = "A simple TSP solver"
authors = ["Ashwin B S <abs1@uci.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
numpy = "1.26.1"
networkx = "3.2.1"
matplotlib = "3.8.1"
scipy = "^1.11.3"
deprecated = "^1.2.14"
click = "^8.1.7"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
